# peerpower

./: .gitignore  TODO.backend.md  draft  draft2
backend/: Cargo.toml  Dockerfile  README.md  docker-compose.yml
backend/scripts/: run-dev.sh
backend/src/: main.rs
backend/src/config/: mod.rs
backend/src/domain/: mod.rs
backend/src/domain/entities/: job.rs  message.rs  mod.rs  provider.rs  user.rs
backend/src/domain/repositories/: mod.rs
backend/src/domain/services/: auth_service.rs
backend/src/infrastructure/: auth_service_impl.rs  job_processor.rs  mod.rs
backend/src/infrastructure/blockchain/: mod.rs
backend/src/infrastructure/database/: connection.rs  mod.rs  redis.rs  user_repository.rs
backend/src/infrastructure/messaging/: fcm_service.rs  mod.rs
backend/src/infrastructure/payments/: mod.rs
backend/src/presentation/: mod.rs
backend/src/presentation/handlers/: admin_handlers.rs  auth_handlers.rs  earnings_handlers.rs  message_handlers.rs  mod.rs  provider_handlers.rs  user_handlers.rs
backend/src/presentation/middleware/: auth_middleware.rs
backend/src/shared/: app_state.rs  errors.rs  mod.rs
