[package]
name = "peerpower-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "request-id"] }
hyper = { version = "1.0", features = ["full"] }
tokio = { version = "1.0", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
mongodb = "2.8"
bson = { version = "2.9", features = ["chrono-0_4"] }

# Redis for distributed caching and queues
redis = { version = "0.25", features = ["tokio-comp", "streams"] }

# Configuration
config = "0.14"
dotenvy = "0.15"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
tracing-opentelemetry = "0.22"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Async traits
async-trait = "0.1"

# HTTP client for external APIs
reqwest = { version = "0.11", features = ["json"] }

# JWT and crypto
jsonwebtoken = "9.2"
uuid = { version = "1.7", features = ["v4", "serde"] }
argon2 = "0.5"
rand = "0.8"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Validation
validator = { version = "0.18", features = ["derive"] }

# Phone number validation
phonenumber = "0.3"

# Futures and streams
futures = "0.3"
tokio-stream = "0.1"

# Metrics
metrics = "0.22"
metrics-exporter-prometheus = "0.13"

# Rate limiting
tower_governor = "0.3"

[dev-dependencies]
# Testing
tokio-test = "0.4"
testcontainers = "0.15"
mockall = "0.12"
httpmock = "0.7"
